--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -10,7 +10,6 @@
         </div>
       </li>
     </ul>
-    <!-- /.itemBox__row -->
   </div>
 
   <div class="itemBox JS_multiSelector__box">
@@ -295,5 +294,4 @@
     </div><!-- /.itemBox -->
   </div><!-- /.itemBox -->
 
-</div>
-<!-- /.multiSelector -->
+</div><!-- /.multiSelector -->
