--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -537,25 +537,14 @@
     }
 
     &--item {
-      &::after {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 0;
-        display: block;
-        background-color: #CCAF75;
-        z-index: 2;
-        pointer-events: none;
-        opacity: 0;
-        transition: all .3s ease-in-out;
-      }
-
       &:hover {
-        &::after {
-          height: 2px;
-          opacity: 1;
+        .itemBox {
+          &__cell {
+            &::before {
+              height: 2px;
+              opacity: 1;
+            }
+          }
         }
       }
 
@@ -568,16 +557,42 @@
       }
 
       .itemBox {
-        &__cell:not(.itemBox__cell--flex0) {
-          &::after {
+        &__cell {
+          &::before {
             content: '';
             position: absolute;
-            top: 0;
-            right: 0;
-            width: 10px;
-            height: 100%;
-            z-index: 1;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 0;
+            display: block;
+            background-color: #A9A9A9;
+            z-index: 2;
             pointer-events: none;
+            opacity: 0;
+            transition: all .3s ease-in-out;
+          }
+
+          &:not(.itemBox__cell--flex0) {
+            &::after {
+              content: '';
+              position: absolute;
+              top: 0;
+              right: 0;
+              width: 10px;
+              height: 100%;
+              z-index: 1;
+              pointer-events: none;
+            }
+          }
+
+          &--permalink {
+            &::before {
+              left: -10%;
+              width: 120%;
+              background: #B2B2B2;
+              background: linear-gradient(to right, #b2b2b2 0%, #00baff 20%, #00baff 50%, #00baff 80%, #b2b2b2 100%);
+            }
           }
         }
       }
