--- a/sass/components/breadcrumbs.scss
+++ b/sass/components/breadcrumbs.scss
@@ -6,9 +6,6 @@
   padding: 0 10px;
   margin: 0 20px;
   background: rgb(193,193,193);
-  /*
-  background: linear-gradient(0deg, rgba(193,193,193,1) 0%, rgba(211,211,211,1) 20%, rgba(217,217,217,1) 100%);
-  */
   white-space: nowrap;
   overflow: hidden;
 
@@ -27,6 +24,18 @@
       pointer-events: none;
     }
 
+    &::after {
+      content: '';
+      position: absolute;
+      top: -10px;
+      bottom: 0;
+      left: -10px;
+      right: -10px;
+      box-shadow: inset 0 0 20px rgba(0,0,0,.3);
+      z-index: 3;
+      pointer-events: none;
+    }
+
     .breadcrumbs__item {
       direction: ltr;
 
@@ -34,7 +43,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        z-index: 9999999;
+        z-index: 2;
         opacity: 1;
         padding: 0 20px 0 10px;
         background-color: #c1c1c1;
@@ -66,14 +75,14 @@
 	  position: relative;
 	  display: inline-block;
     line-height: 35px;
-    margin: 0 20px 0 0;
+    padding: 0 20px 0 0;
 
     &::after {
       content: '/';
       font-size: 22px;
       position: absolute;
       top: 0;
-      right: -13px;
+      right: 8px;
     }
 
     * {
