--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -57,6 +57,11 @@
     <li class="itemBox__cell">
       <div class="itemBox__cellInner">34342-34252345-342543523-343213124</div>
     </li>
+    <li class="itemBox__cell itemBox__cell--flex0">
+      <div class="itemBox__cellInner">
+        <div class="itemBox__action itemBox__action--secondary">܌</div>
+      </div>
+    </li>
     <li class="itemBox__cell itemBox__cell--flex3">
       <div class="itemBox__cellInner">
 
