--- a/sass/app.scss
+++ b/sass/app.scss
@@ -50,6 +50,9 @@ body.page-Tag-picker {
   background-color: #FFF;
   margin: 50px 25%;
 }
+body.page-Itembox {
+  margin: 50px 15%;
+}
 body.page-Font {
   position: relative;
   background-color: #FFF;
