--- a/sass/components/breadcrumbs.scss
+++ b/sass/components/breadcrumbs.scss
@@ -3,7 +3,7 @@
 
 .breadcrumbs {
   position: relative;
-  padding: 0 10px;
+  padding: 0 0 0 10px;
   margin: 0 20px;
   background: rgb(193,193,193);
   white-space: nowrap;
