--- a/_includes/blocks/popup/ms-load-more.html
+++ b/_includes/blocks/popup/ms-load-more.html
@@ -1,4 +1,4 @@
-<ul class="itemBox__row itemBox__row--action">
+<ul class="itemBox__row itemBox__row--item itemBox__row--action">
   <li class="itemBox__cell itemBox__cell--action">
     <div class="itemBox__cellInner">
       <div class="itemBox__action">Load <span>5362</span> more</div>
