update itembox table

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -198,7 +198,7 @@
     </ul>
 
     <ul class="itemBox__row itemBox__row--item">
-      <li class="itemBox__cell itemBox__cell--action itemBoxTable__bodyCell--toggle" style="flex-grow: 0;" data-flex="0">
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
         <div class="itemBox__cellInner">
           <i class="itemBox__action">ऄ</i>
         </div>
