chnage status btn to readonly

--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -9,8 +9,8 @@
 
   <div class="item-header__actions">
     <div class="item-header__action">
-      <div class="pmx-selector">
-        <div class="pmx-selector__item pmx-selector__item--selected">
+      <div class="pmx-selector pmx-selector--readonly">
+        <div class="pmx-selector__item">
           <div class="pmx-selector__block">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</div>
           </div>
