--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -1,6 +1,11 @@
 ---
 ---
 
+:root {
+  --color-primary: #BF920B;
+  --color-secondary: #E61616;
+}
+
 // the file extension has to be .css
 
 @import "reset.css";
