--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -13,34 +13,35 @@
   <div class="itemBox JS_appNavBox">
     {% for group in site.data.app-nav-tab1.groups %}
       <ul class="itemBox__row itemBox__row--item">
-        <li class="itemBox__cell itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
           <div class="itemBox__cellInner">
-            <div class="itemBox__action JS_text">{{group.name}}</div>
+            <div class="itemBox__action">{{group.icon}}</div>
+          </div>
+        </li>
+        <li class="itemBox__cell itemBox__cell--permalink">
+          <div class="itemBox__cellInner">
+            <div class="JS_text">{{group.name}}</div>
           </div>
         </li>
       </ul>
       <div class="itemBox itemBox--children">
-        <div class="itemBoxTable">
-          <div class="itemBoxTable__body">
-            {% for item in group.items %}
-              <ul class="itemBox__row itemBox__row--item JS_filterableCell">
-                <li class="itemBox__cell">
-                  <div class="itemBox__cellInner ">
+        {% for item in group.items %}
+          <ul class="itemBox__row itemBox__row--item JS_filterableCell">
+            <li class="itemBox__cell">
+              <div class="itemBox__cellInner ">
 
-                    <div class="pmx-selector pmx-selector--readonly">
-                      <div class="pmx-selector__item">
-                        <div class="pmx-selector__block">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">{{item}}</div>
-                        </div>
-                      </div>
+                <div class="pmx-selector pmx-selector--readonly">
+                  <div class="pmx-selector__item">
+                    <div class="pmx-selector__block">
+                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">{{item}}</div>
                     </div>
-
                   </div>
-                </li>
-              </ul>
-            {% endfor %}
-          </div>
-        </div>
+                </div>
+
+              </div>
+            </li>
+          </ul>
+        {% endfor %}
       </div>
     {% endfor %}
     {% include blocks/popup/ms-load-more.html %}
