--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -35,7 +35,13 @@
         <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">झ</div>
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">स</div>
+          </div>
+        </div>
+        <div class="pmx-selector__itemSeperator"></div>
+        <div class="pmx-selector__item JS_selectorItem">
+          <div class="pmx-selector__block">
+            <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ढ़</div>
           </div>
         </div>
       </div>
