--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,42 +1,20 @@
 ---
 ---
 
-
 body {
-  /*
-  font-family: 'Source Sans Pro', sans-serif;
-  font-family: 'tenforce', sans-serif;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "tenforce", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  */
-  font-family:  -apple-system,
-                BlinkMacSystemFont,
-                "Segoe UI",
-                "tenforce",
-                Helvetica,
-                Arial,
-                sans-serif,
-                "Apple Color Emoji",
-                "Segoe UI Emoji",
-                "Segoe UI Symbol";
-
+  font-family: -apple-system, BlinkMacSystemFont, "Source Sans Pro", "tenforce", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-family: 'tenforce', 'Source Sans Pro', Arial, sans-serif;
   font-family: 'Source Sans Pro', 'tenforce', Arial, sans-serif;
-
-  overflow-x: hidden;
-  background-color: #4692C3;
-  min-height: 100vh;
-
-  -webkit-font-feature-settings: "kern" 1,"liga" 0;
-  font-feature-settings: "kern" 1,"liga" 0;
-
   font-kerning: normal;
-  text-rendering: optimizeLegibility;
-
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
   -webkit-font-variant-ligatures: no-common-ligatures;
   font-variant-ligatures: no-common-ligatures;
+  -webkit-font-feature-settings: "kern" 1,"liga" 0;
+  font-feature-settings: "kern" 1,"liga" 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+
+  background-color: #4692C3;
 
   &.fixed {
     overflow-y: hidden;
