--- a/sass/app.scss
+++ b/sass/app.scss
@@ -21,9 +21,7 @@ body {
   }
 }
 body.page-Components,
-body.page-Itembox,
-body.page-Filter,
-body.page-Tag-picker {
+body.page-Itembox {
   position: relative;
   background-color: #FFF;
   margin: 50px 25%;
