better position for pmx-selectors inside tabel cells

--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -703,6 +703,10 @@
     line-height: 40px;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    .pmx-selector {
+      top: 2px;
+    }
   }
 
   &__input {
