update github links

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,15 +51,15 @@
 <body>
 
   <section>
-    <a href="/present" target="_blank">Current<br>Layout</a>
-    <a href="/future" target="_blank">Future<br>Layout</a>
+    <a href="present" target="_blank">Current<br>Layout</a>
+    <a href="future" target="_blank">Future<br>Layout</a>
   </section>
 
   <section>
-    <a href="/components" target="_blank">PMX<br>Components</a>
-    <a href="/itembox" target="_blank">PMX<br>ItemBox</a>
-    <a href="/font" target="_blank">Font<br>Configuration</a>
-    <a href="/tutorial" target="_blank">Tutorial<br>Example</a>
+    <a href="components" target="_blank">PMX<br>Components</a>
+    <a href="itembox" target="_blank">PMX<br>ItemBox</a>
+    <a href="font" target="_blank">Font<br>Configuration</a>
+    <a href="tutorial" target="_blank">Tutorial<br>Example</a>
   </section>
 
 </body>
