--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -24,7 +24,7 @@
           <div class="itemBoxTable__body">
             {% for item in group.items %}
             <ul class="itemBox__row itemBox__row--item JS_filterableCell">
-              <li class="itemBox__cell">
+              <li class="itemBox__cell itemBox__cell--permalink">
                 <div class="itemBox__cellInner JS_text">
 
                   <div class="pmx-selector pmx-selector--readonly">
