--- a/_includes/blocks/app-header.html
+++ b/_includes/blocks/app-header.html
@@ -17,3 +17,14 @@
     </div>
   </div>
 </div>
+
+<div class="row">
+  <div class="col col-6 align-left">
+    <a href="#" class="action-icon font--action JS_toggle-app-navigator">छ</a>
+    <a href="/" class="action-icon font--action">ढ</a>
+  </div>
+  <div class="col col-6 align-right">
+    <a href="#" class="action-icon font--action JS_toggle-semsearch-1">ञ</a>
+    <a href="#" class="action-icon font--action JS_toggle-user-menu">ज</a>
+  </div>
+</div>
