--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -316,7 +316,7 @@
 
       <ul class="itemBox__row itemBox__row--foot">
         <li class="itemBox__cell">
-          <div class="itemBox__cellInner font--sm">All <span>4</span> items loaded</div>
+          <div class="itemBox__cellInner font--xs">All <span>4</span> items loaded</div>
         </li>
       </ul>
     </div><!-- /.itemBox -->
@@ -328,13 +328,11 @@
 
     <ul class="itemBox__row itemBox__row--foot">
       <li class="itemBox__cell">
-        <div class="itemBox__cellInner font--sm">All <span>423</span> items loaded</div>
+        <div class="itemBox__cellInner font--xs">All <span>423</span> items loaded</div>
       </li>
     </ul>
   </div><!-- /.itemBox -->
 
-  {% include blocks/itembox-row.html %}
-  {% include blocks/itembox-row.html %}
   {% include blocks/itembox-row.html %}
   {% include blocks/itembox-row.html %}
   {% include blocks/itembox-row.html %}
@@ -344,7 +342,7 @@
 
   <ul class="itemBox__row itemBox__row--foot">
     <li class="itemBox__cell">
-      <div class="itemBox__cellInner font--sm">All <span>423</span> items loaded</div>
+      <div class="itemBox__cellInner font--xs">All <span>423</span> items loaded</div>
     </li>
   </ul>
 </div><!-- /.itemBox -->
