--- a/sass/components/pmx-selector.scss
+++ b/sass/components/pmx-selector.scss
@@ -125,7 +125,7 @@
 .pmx-selector {
   position: relative;
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: top;
   height: 30px;
   white-space: nowrap;
   border-radius: 15px;
