--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -471,7 +471,6 @@
     display: flex;
     background-color: #FFF;
     height: 40px;
-    overflow: hidden;
 
     &--h1 {
       background-color: #FFF;
@@ -593,8 +592,6 @@
 
           &--permalink {
             &::before {
-              left: -10%;
-              width: 120%;
               background: #B2B2B2;
               background: linear-gradient(to right, #b2b2b2 0%, #00baff 20%, #00baff 50%, #00baff 80%, #b2b2b2 100%);
             }
@@ -699,14 +696,10 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    padding: 0 15px;
-    line-height: 40px;
+    padding: 5px 15px;
+    line-height: 30px;
     overflow: hidden;
     text-overflow: ellipsis;
-
-    .pmx-selector {
-      top: 2px;
-    }
   }
 
   &__input {
