--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -1,8 +1,8 @@
 <header class="item-header">
   <div class="item-header__title">
     <div class="item-header__meta">
-      <span class="item-header__type item-header__type--bug fnt--label">Bug</span>
-      <span class="item-header__id fnt">391441</span>
+      <span class="item-header__type item-header__type--bug font--label">Bug</span>
+      <span class="item-header__id">391441</span>
     </div>
     <h2 class="font--h2 ellipsis" title="PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END">PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox PMX - Fix horizontal scroll alterneting in FireFox END END END END END END</h2>
   </div>
