fix minor style issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,7 @@
   </head>
 
   <body class="page-{{ page.title }}">
-    <div class="overlay"></div>
-
-    <div class="app cf">
+    <div class="app">
       {{ content }}
     </div>
 
