--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -591,6 +591,12 @@
           }
 
           &--permalink {
+            cursor: pointer;
+
+            * {
+              cursor: pointer;
+            }
+
             &::before {
               background: #B2B2B2;
               background: linear-gradient(to right, #b2b2b2 0%, #00baff 20%, #00baff 50%, #00baff 80%, #b2b2b2 100%);
@@ -671,7 +677,7 @@
       text-align: center;
 
       .itemBox__cellInner {
-        padding: 0;
+        padding: 5px;
       }
     }
     &--flex1 { flex-grow: 1; }
