--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -2,11 +2,7 @@
 ---
 
 .multiSelector {
-  &--visible {
-    opacity: 1 !important;
-    pointer-events: auto !important;
-    z-index: 9999 !important;
-  }
+  text-align: left;
 
   &--popup {
     opacity: 0;
@@ -89,6 +85,12 @@
     }
   }
 
+  &--visible {
+    opacity: 1;
+    pointer-events: auto;
+    z-index: 9999;
+  }
+
   .pmx-selector__item {
     &:hover, &--selected {
       &.JS_pmx-selector__item--include {
@@ -105,7 +107,7 @@
   }
 }
 
-
+/*
 .pmx-selector + .multiSelector {
   position: absolute;
   top: -6px;
@@ -120,7 +122,7 @@
   pointer-events: auto;
   opacity: 1;
 }
-
+*/
 
 @media (max-width: 900px) {
   .multiSelector--popup {
