--- a/sass/components/tabs.scss
+++ b/sass/components/tabs.scss
@@ -165,7 +165,7 @@
 
         .tabs-nav__slideShadow {
           left: 0;
-          background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+          background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, #2c5386 100%);
         }
 
         .tabs-nav__slideArrow {
@@ -182,7 +182,7 @@
 
         .tabs-nav__slideShadow {
           right: 0;
-          background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+          background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #2c5386 100%);
         }
 
         .tabs-nav__slideArrow {
