updade popup include files

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,7 +55,7 @@
   </section>
 
   <section>
-    <a href="components" target="_blank">PMX<br>Components</a>
+    <a href="selectors" target="_blank">PMX<br>Selectors</a>
     <a href="itembox" target="_blank">PMX<br>ItemBox</a>
     <a href="font" target="_blank">Font<br>Configuration</a>
     <a href="tutorial" target="_blank">Tutorial<br>Example</a>
