organize css files

--- a/sass/framework.scss
+++ b/sass/framework.scss
@@ -1,6 +1,17 @@
 ---
 ---
 
+/* Global */
+
+.clearfix,
+.cf {
+  &::after {
+    content: '';
+    display: table;
+    clear: both;
+  }
+}
+
 /* grid */
 
 .row {
