add permalink for nav 1

--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -18,7 +18,7 @@
             <div class="itemBox__action">{{group.icon}}</div>
           </div>
         </li>
-        <li class="itemBox__cell">
+        <li class="itemBox__cell itemBox__cell--permalink">
           <div class="itemBox__cellInner">
             <div class="JS_text">{{group.name}}</div>
           </div>
