padding left 0 for cell following an action of first child

--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -689,6 +689,14 @@
 
     &--action {
       color: #CCAF75;
+
+      &:first-child {
+        + .itemBox__cell {
+          .itemBox__cellInner {
+            padding-left: 0;
+          }
+        }
+      }
     }
 
     &--focus {
