fix line heights in tables

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -309,7 +309,7 @@
 
       <ul class="itemBox__row itemBox__row--h3">
         <li class="itemBox__cell">
-          <div class="itemBox__cellInner">lorem ipsum dolor sit amet</div>
+          <div class="itemBox__cellInner font--label">lorem ipsum dolor sit amet</div>
         </li>
       </ul>
 
