fix action paddings

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -31,7 +31,7 @@
   </ul>
 
   <ul class="itemBox__row itemBox__row--h2">
-    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action itemBoxTable__headCell--toggle">
+    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
       <div class="itemBox__cellInner">
         <i class="itemBox__action JS_expand">ऄ</i>
       </div>
@@ -48,7 +48,7 @@
   </ul>
 
   <ul class="itemBox__row itemBox__row--item">
-    <li class="itemBox__cell itemBox__cell--flex0">
+    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
       <div class="itemBox__cellInner"></div>
     </li>
     <li class="itemBox__cell itemBox__cell--permalink">
@@ -80,7 +80,7 @@
   </ul>
 
   <ul class="itemBox__row itemBox__row--item">
-    <li class="itemBox__cell itemBox__cell--flex0 itemBoxTable__bodyCell--toggle">
+    <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
       <div class="itemBox__cellInner">
         <i class="itemBox__action">ऄ</i>
       </div>
@@ -136,7 +136,7 @@
     </ul>
 
     <ul class="itemBox__row itemBox__row--h2">
-      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action itemBoxTable__headCell--toggle">
+      <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
         <div class="itemBox__cellInner">
           <i class="itemBox__action">ऄ</i>
         </div>
@@ -288,7 +288,7 @@
       </ul>
 
       <ul class="itemBox__row itemBox__row--h2">
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action itemBoxTable__headCell--toggle">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
           <div class="itemBox__cellInner">
             <i class="itemBox__action">ऄ</i>
           </div>
