--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -13,7 +13,7 @@
   <div class="itemBox JS_appNavBox">
     {% for group in site.data.app-nav-tab1.groups %}
       <ul class="itemBox__row itemBox__row--item">
-        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action">
+        <li class="itemBox__cell itemBox__cell--flex0 itemBox__cell--action JS_toggle">
           <div class="itemBox__cellInner">
             <div class="itemBox__action">{{group.icon}}</div>
           </div>
@@ -24,7 +24,7 @@
           </div>
         </li>
       </ul>
-      <div class="itemBox itemBox--children">
+      <div class="itemBox itemBox--children JS_children-closed">
         {% for item in group.items %}
           <ul class="itemBox__row itemBox__row--item JS_filterableCell">
             <li class="itemBox__cell">
