Class rename: JS_itemBox__row--closed -> JS_children-closed

--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -95,7 +95,7 @@
       <div class="itemBoxTable">
         <div class="itemBoxBody">
           {% for item in site.data.newmultiselect.options %}
-          <ul class="itemBox__row JS_filterableCell JS_itemBox__row--closed">
+          <ul class="itemBox__row JS_filterableCell JS_children-closed">
             <li class="itemBox__cell ">
               <div class="itemBox__cellInner ">
                 {% include blocks/popup/include-exclude-selector.html selected="include"%}
