Load more button: changed numbers and text

--- a/_includes/blocks/popup/ms-load-more.html
+++ b/_includes/blocks/popup/ms-load-more.html
@@ -1,7 +1,7 @@
 <ul class="itemBox__row itemBox__row--item itemBox__row--action">
   <li class="itemBox__cell itemBox__cell--action">
     <div class="itemBox__cellInner">
-      <div class="itemBox__action">Load <span>5362</span> more</div>
+      <div class="itemBox__action">Load <span>25</span> more out of 75</div>
     </div>
   </li>
 </ul>
